	special care must be taken in producing correct result and also
	cache does not account for query parameters, so dynamic ADP page
	cannot be cached if it depends on different query parameters. Setting
	it to no cache by default sets behaviour to 4.0 ADP processing. Caching 
	can be disabled also inside the script, AdpEval check for flags during
	page evaluation.

2006-12-27  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/adpcmds.c:
	* nsd/adpeval.c:
	* nsd/adpparse.c: In Tcl caching mode use uplevel
	with bytecode to evaluate proc on global level for
	easy integration with other ADP pages and other Tcl scripts
	running inside the same request

	* doc/src: Updated documentation files
	* configure.in: Updated the script to produce correct output on
	--help command

2006-12-25  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/adpcmds.c:
	* nsd/adpeval.c:
	* nsd/adpparse.c: Updated cached Tcl processing, make it conditional 
	compilation if cache is enabled

        * nsd/nsconf.c:
        * nsd/tcljob.c:
        * nsd/nsd.h: Made jobperthread also config parameter for easy system-wide
        configuration. Added -timeout parameter to ns_job configure and config
        parameter jobtimeout to control how long job thread can wait for new job

2006-12-24  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/adpcmds.c:
	* nsd/adpeval.c:
	* nsd/adpparse.c:
	* nsd/adprequest.c:
        * nsd/tclcmds.c:
        * nsd/server.c:
	* nsd/nsd.h: Changed singlescript behaviour, made it in one pass
        without copying the whole page using temporary buffer. Added new
        ns_adp_info command that can be usefull in the templating engines
        based on ADP.

2006-12-23  Vlad Seryakov  <seryakov@users.sf.net>

	* include/ns.h:
	* include/nsthread.h:
	* nsd/adpcmds.c:
	* nsd/adpeval.c:
	* nsd/adpparse.c:
	* nsd/adprequest.c:
	* nsd/nsconf.c:
	* nsd/nsd.h:
	* nsd/server.c: Updated ADP engine to support .tcl files instead of