@@ -189,6 +189,114 @@ Ns_SockSend(SOCKET sock, void *buf, size_t towrite, Ns_Time *timeoutPtr)
     return nwrote;
 }
 
+/*
+ *----------------------------------------------------------------------
+ *
+ * Ns_SockWrite --
+ *
+ *      Timed write to a non-blocking socket.
+ *      This function will try write all of the data
+ *
+ * Results:
+ *      Number of bytes written, -1 for error
+ *
+ * Side effects:
+ *      May wait given timeout.
+ *
+ *----------------------------------------------------------------------
+ */
+
+int
+Ns_SockWrite(SOCKET sock, void *vbuf, size_t towrite, Ns_Time *timePtr)
+{
+    int nwrote, n;
+    char *buf;
+
+    nwrote = towrite;
+    buf = vbuf;
+    while (towrite > 0) {
+        n = Ns_SockSend(sock, buf, towrite, timePtr);
+        if (n < 0) {
+            return -1;
+        }
+        towrite -= n;
+        buf += n;
+    }
+    return nwrote;
+}
+
+/*
+ *----------------------------------------------------------------------
+ *
+ * Ns_SockWriteV --
+ *
+ *      Send buffers to client, it will try to send all data
+ *
+ * Results:
+ *      Number of bytes of given buffers written, -1 for
+ *      error on first send.
+ *
+ * Side effects:
+ *      May send data in multiple packets if nbufs is large.
+ *
+ *----------------------------------------------------------------------
+ */
+
+int
+Ns_SockWriteV(SOCKET sock, struct iovec *bufs, int nbufs, Ns_Time *timePtr)
+{
+    int           sbufLen, sbufIdx = 0, nsbufs = 0, bufIdx = 0;
+    int           nwrote = 0, towrite = 0, sent = -1;
+    struct iovec  sbufs[UIO_MAXIOV], *sbufPtr;
+
+    sbufPtr = sbufs;
+    sbufLen = UIO_MAXIOV;
+
+    while (bufIdx < nbufs || towrite > 0) {
+
+        while (bufIdx < nbufs && sbufIdx < sbufLen) {
+            if (bufs[bufIdx].iov_len > 0 && bufs[bufIdx].iov_base != NULL) {
+                sbufPtr[sbufIdx].iov_base = bufs[bufIdx].iov_base;
+                sbufPtr[sbufIdx].iov_len = bufs[bufIdx].iov_len;
+                towrite += sbufPtr[sbufIdx].iov_len;
+                sbufIdx++;
+                nsbufs++;
+            }
+            bufIdx++;
+        }
+
+        sent = Ns_SockSendBufs(sock, sbufPtr, nsbufs, timePtr);
+        if (sent < 0) {
+            return -1;
+        }
+        towrite -= sent;
+        nwrote  += sent;
+
+        if (towrite > 0) {
+            for (sbufIdx = 0; sbufIdx < nsbufs && sent > 0; sbufIdx++) {
+                if (sent >= (int) sbufPtr[sbufIdx].iov_len) {
+                    sent -= sbufPtr[sbufIdx].iov_len;
+                } else {
+                    sbufPtr[sbufIdx].iov_base = (char *) sbufPtr[sbufIdx].iov_base + sent;
+                    sbufPtr[sbufIdx].iov_len -= sent;
+                    break;
+                }
+            }
+            if (bufIdx < nbufs - 1) {
+                memmove(sbufPtr, sbufPtr + sbufIdx, (size_t) sizeof(struct iovec) * nsbufs);
+            } else {
+                sbufPtr = sbufPtr + sbufIdx;
+                sbufLen = nsbufs - sbufIdx;
+            }
+            nsbufs -= sbufIdx;
+        } else {
+            nsbufs = 0;
+        }
+        sbufIdx = 0;
+    }
+    return nwrote;
+}
+
 
 /*
  *----------------------------------------------------------------------
